--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-marquee {
-    direction: rtl;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
 /* GLOBAL */
 
 @font-face {
@@ -65,6 +59,7 @@ body {
 }
 
 h1,
+.h1 span,
 h2,
 h3,
 h4 {
@@ -72,7 +67,8 @@ h4 {
     text-transform: uppercase;
 }
 
-h1 {
+h1,
+.h1 span {
     font-size: 88px;
     line-height: 95px;
     padding-left: 35px;
@@ -118,7 +114,8 @@ img {
     width: 1270px;
 }
 
-.mainNav .container {
+.mainNav .container,
+.label .container {
     padding: 0 35px;
 }
 
@@ -276,6 +273,61 @@ section.show header:hover {
 
 section.show .tab-content {
     max-height: 2200vh;
+}
+
+/* MARQUEE */
+
+.marquee {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.marquee-content span {
+    opacity: 0;
+}
+
+.marquee-content .fixed {
+    opacity: 1;
+}
+
+.marquee .marquee-content span {
+    opacity: 1;
+}
+
+.marquee .marquee-content {
+    display: inline-flex;
+    animation: marquee 45s linear infinite;
+}
+
+.h1 {
+    animation: swap 15s linear infinite;
+}
+
+@keyframes swap {
+
+    0%,
+    50% {
+        right: 0%;
+    }
+
+    50.01%,
+    100% {
+        left: 0%;
+    }
+}
+
+/* Transition */
+
+@keyframes marquee {
+    0% {
+        transform: translateX(0%)
+    }
+
+    100% {
+        transform: translateX(-100%)
+    }
 }
 
 /* //////// 7 MECANIQUES ///////// */
