--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ img {
 .information {
     display: flex;
     background-color: #FF6E29;
-    /* width: 100%; */
+    width: 100%;
     height: 30px;
     overflow: hidden;
     align-items: center;
@@ -243,10 +243,9 @@ section.show .tab-close {
     position: absolute;
     font-family: "misobold";
     font-size: 30px;
-    opacity: 0;
     right: 35px;
     bottom: 10px;
-    opacity: 1
+    opacity: 1;
 }
 
 section>header>.header-content {
