--- a/css/responsive.css
+++ b/css/responsive.css
@@ -165,9 +165,15 @@
 
 @media screen and (min-width: 767px) and (max-width: 980px) {
 
-    h1,
+    .h1,
     .h1 span {
         font-size: 56px;
+        margin-top: 12px;
+    }
+
+    section>header {
+        height: 120px;
+        max-height: 120px;
     }
 
     .tab-content .container,
